# pymol_wizard_installer

./: .gitignore  README.md  example_config.yaml  example_metadata.yaml  pyproject.toml
pymol_wizard_installer/: install_wizard.py  uninstall_wizard.py  wizard_metadata.py
src/pymol_wizard_installer/: install_wizard.py  uninstall_wizard.py  wizard_metadata.py
src/pymol_wizard_installer/installer/: base_installer.py  linux_installer.py  windows_installer.py
